@startuml
!define primary_key(x) <b>x</b>
!define foreign_key(x) <i>x</i>

entity workloads {
    primary_key(id) UUID
    name TEXT
    workload_type TEXT
    namespace TEXT
    cluster TEXT
    image_name TEXT
    image_tag TEXT
    created_at TIMESTAMP
    updated_at TIMESTAMP
    --
    CONSTRAINT workload_id UNIQUE (name, workload_type, namespace, cluster)
}

entity images {
    primary_key(name) TEXT
    primary_key(tag) TEXT
    metadata JSONB
    created_at TIMESTAMP
    updated_at TIMESTAMP
}

entity vulnerability_summary {
    primary_key(id) UUID
    image_name TEXT
    image_tag TEXT
    critical INT
    high INT
    medium INT
    low INT
    unassigned INT
    risk_score INT
    created_at TIMESTAMP
    updated_at TIMESTAMP
    --
    CONSTRAINT image_name_tag UNIQUE (image_name, image_tag)
}

entity vulnerabilities {
    primary_key(id) UUID
    image_name TEXT
    image_tag TEXT
    package TEXT
    cwe_id TEXT
    created_at TIMESTAMP
    updated_at TIMESTAMP
    --
    CONSTRAINT image_name_tag_cwe_id_package UNIQUE (image_name, image_tag, cwe_id, package)
}

entity suppressed_vulnerabilities {
    primary_key(id) UUID
    image_name TEXT
    package TEXT
    cwe_id TEXT
    suppressed BOOLEAN
    created_at TIMESTAMP
    updated_at TIMESTAMP
    --
    CONSTRAINT image_name_package_cwe_id UNIQUE (image_name, package, cwe_id)
}

entity cwe {
    primary_key(cwe_id) TEXT
    cwe_title TEXT
    cwe_desc TEXT
    cwe_link TEXT
    severity INT
    created_at TIMESTAMP
    updated_at TIMESTAMP
}

workloads }|--|| images : "fk_image (ON DELETE CASCADE)"
vulnerability_summary }|--|| images : "fk_image (ON DELETE CASCADE)"
vulnerabilities }|--|| images : "fk_image (ON DELETE CASCADE)"
vulnerabilities }|--|| cwe : "fk_cwe (ON DELETE CASCADE)"
@enduml
